<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".ui.home.HomeFragment">

    <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ablesedatum"
            app:layout_constraintBottom_toBottomOf="@+id/gas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <ImageView
            android:id="@+id/image_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_today"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_view_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <EditText
            android:id="@+id/electric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/editText_electric"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_date"
            app:layout_constraintVertical_bias="0.0" />

    <EditText
            android:id="@+id/gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/editText_gas"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/electric"
            app:layout_constraintVertical_bias="0.0" />

    <EditText
            android:id="@+id/water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/editText_water"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gas"
            app:layout_constraintVertical_bias="0.0" />

    <Button
            android:id="@+id/calc_electric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_state"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/electric"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/electric"
            app:layout_constraintTop_toTopOf="@+id/electric" />

    <Button
            android:id="@+id/calc_gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_state"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/gas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gas"
            app:layout_constraintTop_toTopOf="@+id/gas" />

    <Button
            android:id="@+id/calc_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_state"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/water"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/water"
            app:layout_constraintTop_toTopOf="@+id/water" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/show_charts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_show_chart" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="uploadFile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_file_upload" />
</androidx.constraintlayout.widget.ConstraintLayout>